@@ -2,6 +2,8 @@ version 0.8.4:
  - Fixed bug in AimlParser creation, if the aiml module was not in the same
    directory as the script that imported it.
  - Improved Unicode support (again) (thanks to Daniel Kottow for his help).
+ - 2nd pass at documentation.  All functions now have useful, properly-formatted
+   docstrings.
 
 version 0.8.3:
  - Reworked the way AimlParser objects are created, to allow support for
